# pymc-model-backend

./: README.md  chatgpt.ipynb  node.ipynb  pyproject.toml  run.py  run_diff.py  run_expr.py  run_model.py
src/symgraph/: __init__.py  differentiator.py  expression.py  expression2.py  model.py  rewriter.py  rewriter2.py  utils.py
syntax/: model.py
tests/: test_ops.py  test_rewriter.py  test_simplification.py
