[project]
name = "symgraph"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thomas Aarholt", email = "thomasaarholt@gmail.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "pydantic>=2.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/symgraph"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.4",
]
